<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/questcost_relativelayout1" >
    <LinearLayout android:layout_width="match_parent"
        		  android:layout_height="50dp"
        		  android:layout_alignParentTop="true"
        		  android:id="@+id/query_cost_linearlayout1"
        		  android:background="#349CFF">
    <TextView android:layout_width="0dp"
        	  android:layout_weight="1"
        	  android:layout_height="match_parent"
        	  android:text="@string/balance"
      		  style="@style/query_textview"
        />
    <TextView android:layout_width="0dp"
         	  android:layout_height="match_parent"
         	  android:layout_weight="3"
         	  android:text="@string/hello_world"
         	  style="@style/query_textview"
         	  
         	  />
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
	    		  android:layout_height="50dp"
	    		  android:layout_below="@+id/query_cost_linearlayout1"
	    		  android:background="#349CFF"
	    		   >
    <TextView  android:layout_width="0dp"
        	   android:layout_weight="1"
        	   android:layout_height="match_parent"
        	   android:text="@string/next_month"
        	   style="@style/query_textview"
        	   
        />
    <TextView  android:layout_width="0dp"
               android:layout_weight="3"
               android:layout_height="match_parent"
               android:text="@string/hello_world"
               style="@style/query_textview"
        />
	    
	</LinearLayout>
</RelativeLayout>
